<resources>
    <string name="app_name">PriceTracker</string>
    <string name="loginTitle">Login</string>
    <string name="userName">Username</string>
    <string name="password">Password</string>
    <string name="rememberCheckBox">Remember Me</string>
    <string name="signInButton">Sign In</string>
    <string name="registerLink">Not registered? Click here!</string>

    <string name="signUpTitle">Sign Up</string>
    <string name="signUpUserName">Username</string>
    <string name="email">Email</string>
    <string name="signUpPassword">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="confirmButton">Confirm</string>

    <string name="productName">Product Name</string>
    <string name="productDescription">Product Description</string>
    <string name="productPrice">Product Price</string>
    <string name="productType">Product Type</string>

    <string name="productImage">Product Image</string>
    <string name="openLinkButton">Open Link</string>
    <string name="url">URL...</string>
    <string name="openLink">Open link:</string>
    <string name="currency">Currency</string>
    <string name="viewChart">View Statistics</string>
    <string name="addNewProduct">Add new product:</string>
    <string name="yourProducts">Your products:</string>
    <string name="addUrl">Add Url</string>
    <string name="price">Price</string>
</resources>
