<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_of_the_building"
    tools:context=".Activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:layout_margin="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorWhite"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/signUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            android:text="@string/signUpTitle" />

        <EditText
            android:id="@+id/signUpUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="50dp"
            android:inputType="textPersonName"
            android:hint="@string/signUpUserName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPersonName"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/signUpPassword" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_rounded"
            android:text="@string/confirmButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>