<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ProductDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:layout_weight="1"
            android:scaleType="center"
            android:visibility="gone"
            android:src="@drawable/laptop" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:text="@string/productName" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:text="@string/productDescription" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:text="@string/productPrice" />

        <TextView
            android:id="@+id/productType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="40dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:text="@string/productType" />
        <Button
            android:id="@+id/openLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlue"
            android:text="@string/openLinkButton" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/linechart"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            </com.github.mikephil.charting.charts.LineChart>

        </RelativeLayout>





    </LinearLayout>


</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>