<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_of_the_building"
    tools:context=".Activities.DashboardActivity"
    tools:showIn=""
    >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_marginBottom="20dp"
        >

        <TextView
            android:id="@+id/addNewProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/addNewProduct" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:layout_marginTop="15dp"
            android:hint="@string/url"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/productTypes"
            >

        </Spinner>

        <Button
            android:id="@+id/addUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_rounded"
            android:layout_marginTop="15dp"
            android:text="@string/addUrl" />

        <TextView
            android:id="@+id/yourProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/yourProducts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>